--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,5 @@
 name: Build and Deploy
-on:
-  push:
-    # NOTE:
-    #   For a **project** site (username.github.io/project/), push things
-    #     to the **master** branch and make sure to set the line below to
-    # `   - master`; also, at the end of the file, change to `BRANCH: gh-pages`
-    #
-    #   For a **personal** site (username.github.io/), push things to a **dev**
-    #     branch  and make sure to set the line  below to `- dev` this is
-    #     because for user pages GitHub pages **requires** the deployment to be
-    #     on the master branch; also, at the end of the file, change to
-    #    `BRANCH: master`
-    branches:
-      - dev
+on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -60,5 +47,5 @@ jobs:
         # NOTE
         #   Set this to `BRANCH: gh-pages` for a **project** page and  to
         #   `BRANCH: master` for a **personal** page
-        BRANCH: master
+        BRANCH: gh-pages
         FOLDER: __site
