--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+    - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
+       id: ACTIONS_ALLOW_UNSECURE_COMMANDS
+       run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
     - name: Checkout
       uses: actions/checkout@v2
       with:
