--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,5 +50,5 @@ jobs:
         # NOTE
         #   Set this to `BRANCH: gh-pages` for a **project** page and  to
         #   `BRANCH: master` for a **personal** page
-        BRANCH: master
+        BRANCH: gh-pages
         FOLDER: __site
